--- a/src/test/resources/common.properties
+++ b/src/test/resources/common.properties
@@ -3,4 +3,8 @@ username=hrhead@gmail.com
 password=hrhead@123
 browser=chrome
 timeout=10
+crmurl=http://www.facebook.com
+crmusername=suma.k@gmail.com
+crmpassword=suma12345
+makemytripurl=https://www.makemytrip.com/
 
